2011-01-22  Julien Danjou  <julien@danjou.info>

	* mailcap.el (mailcap-mime-extensions): Rename text/org to text/x-org.

2011-01-22  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-preferred-alternative-precedence): Don't bug out on
	nested related parts.

	* nnfolder.el (nnfolder-request-expire-articles): Return the list of
	unexpired articles.  This fixes the regression that led expiry marks to
	disappear from nnfolder groups.

2011-01-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-button-alist, gnus-button-handle-info-keystrokes):
	Don't confuse the "ret" of "retrograde" with RET.

2011-01-21  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-mime-display-single): Use mm-display-inline rather
	than mm-insert-inline.

2011-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-remove-images, gnus-article-show-images):
	Widen article buffer.

2011-01-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-find-buffer-file-coding-system): Don't forget to kill
	the temp buffer.
	* message.el (message-mailer-swallows-blank-line): Use with-temp-buffer.

2011-01-20  Julien Danjou  <julien@danjou.info>

	* mm-decode.el (mm-inline-media-tests): Add text/x-sh.

	* gnus-art.el (gnus-mime-inline-part): Use mm-display-inline rather
	than mm-insert-inline to insert inline part: this respect
	mm-inline-media-tests displayers.

	* mm-view.el (mm-display-shell-script-inline): New function.

	* mm-decode.el (mm-inline-media-tests): Add x-shellscript and x-sh.

	* mm-uu.el (mm-uu-type-alist): Add org block.
	(mm-uu-org-src-code-block-extract): New function.

	* mm-view.el (mm-display-org-inline): New function.

	* mm-decode.el (mm-automatic-display): Add text/org.

	* mailcap.el (mailcap-mime-extensions): Add .org.

2011-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-highlight): Remove argument passed to
	gnus-article-add-buttons.
